
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_1__ ;


struct TYPE_4__ {char* value; } ;
typedef TYPE_1__ git_config_entry ;
typedef int git_config ;


 int GET_ALL_ERRORS ;
 int GIT_ERROR_CONFIG ;
 int get_entry (TYPE_1__**,int const*,char const*,int,int ) ;
 int git_config_entry_free (TYPE_1__*) ;
 int git_error_set (int ,char*) ;
 int is_readonly (int const*) ;

int git_config_get_string(
 const char **out, const git_config *cfg, const char *name)
{
 git_config_entry *entry;
 int ret;

 if (!is_readonly(cfg)) {
  git_error_set(GIT_ERROR_CONFIG, "get_string called on a live config object");
  return -1;
 }

 ret = get_entry(&entry, cfg, name, 1, GET_ALL_ERRORS);
 *out = !ret ? (entry->value ? entry->value : "") : ((void*)0);

 git_config_entry_free(entry);

 return ret;
}
